web/wp-content/themes/lf-theme/source/scss/components/_searchandfilter.scss
.searchandfilter {
    >ul {
        margin: 0; // reset
        display: flex;
        flex-wrap: wrap;

        >*:not(:last-of-type) {
            flex: 120px 0 0%;
            flex-grow: 1;
            margin-right: 0.5em;
        }

        >*:last-of-type {
            width: 100px;
        }

        @media (max-width: 599px) {
            >li {
                padding: 0.5em 0;

                .sf-input-select {
                    width: 100%;
                }
            }
        }
    }

    select.sf-input-select {
        min-width: 150px;
    }

    .chosen-container {
        width: 100% !important;
        max-width: 100%;
        display: inline-block;

        a:hover {
            text-decoration: none;
        }
    }
}

.results-count {
    margin-bottom: 1rem;

    @media (max-width: 599px) {
        margin-top: 1rem;
    }
}

.search-filter-reset {
    @extend .button;
    @extend .stocky;
    @extend .outline;
    @extend .secondary;
    @extend .smaller;
    background-color: transparent;
    border-color: $grey-400;
    color: $grey-400;

    &:hover {
        border-color: $primary-color;
    }

}

